packages/next/src/app/page.module.scss
@use 'variables';

.main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}

.titleContainer {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  gap: 2rem;
  max-width: 100%;
  border-radius: 8rem;
  padding: 1rem 3rem 1rem 1rem;
  background-color: rgb(var(--primary-color));
  margin-bottom: 2rem;

  .title {
    font-size: 5.25em;
    font-weight: 100;
    letter-spacing: 0.1rem;
    text-align: center;
    color: rgb(var(--on-primary-color));
    margin: 2rem 0;
  }

  @media screen and (max-width: variables.$breakpoint-sm) {
    flex-direction: column;
    gap: 1rem;
    background-color: transparent;
    justify-content: center;
    padding: 0;

    .title {
      color: rgb(var(--on-background-color));
      margin-top: 0;
    }
  }
}

.links {
  display: flex;
  gap: 3em;

  @media screen and (max-width: variables.$breakpoint-lg) {
    margin-top: 2em;
    flex-direction: column;
    gap: 1em;
    align-items: center;
  }

  a {
    font-size: 1.5em;
    font-weight: 500;
    letter-spacing: 0.1rem;
    color: rgb(var(--on-background-color));
    text-decoration: none;
    text-transform: uppercase;
    text-align: center;

    &:hover {
      color: rgb(var(--primary-color));
    }
  }
}

